--- a/leash-express/package.json
+++ b/leash-express/package.json
@@ -2,6 +2,10 @@
   "name": "leash-express",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "14.15.3",
+    "npm": "6.14.9"
+  },
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
