--- a/leash-express/.gitignore
+++ b/leash-express/.gitignore
@@ -5,7 +5,6 @@
 /.pnp
 .pnp.js
 
-/config
 
 # testing
 /coverage
@@ -20,6 +19,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 npm-debug.log*
 yarn-debug.log*
