--- a/leash-express/package.json
+++ b/leash-express/package.json
@@ -15,16 +15,22 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.858.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "express-validator": "^6.12.1",
     "http-errors": "^1.8.0",
     "mongo": "^0.1.0",
     "mongoose": "^5.11.18",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "nodemon": "^2.0.7",
+    "passport": "^0.4.1",
+    "path": "^0.12.7",
     "uuid": "^8.3.2"
   }
 }
