ADD mongo db url to env

--- a/leash-express/.env
+++ b/leash-express/.env
@@ -8,3 +8,6 @@ accessKeyId=AKIAZLBHUHLT5TTJZV5M
 #token_key
 TOKEN_KEY=1234
 ADMIN_KEY=aa19ed1b63955f17719f52103455f00d
+
+#mongo
+DB=mongodb://leashposts:leashmasterposts@leash-shard-00-00.t5u93.mongodb.net:27017,leash-shard-00-01.t5u93.mongodb.net:27017,leash-shard-00-02.t5u93.mongodb.net:27017/Leash?ssl=true&replicaSet=atlas-gbs8j9-shard-0&authSource=admin&retryWrites=true&w=majority
