--- a/leash-express/docker-compose.yml
+++ b/leash-express/docker-compose.yml
@@ -10,9 +10,9 @@ services:
    - /app:/usr/src/app/       
    - /usr/src/app/node_modules
    - /usr/src/app/.next
-  env_file:
+  environment:
    - secretAccessKey: 4m2pW+k44Q3xGLFUC2pAB3/ii3uu77cV/wRFXgTi
    - accessKeyId: AKIAZLBHUHLT5TTJZV5M
-   - TOKEN_KEY: 1234
+   - TOKEN_KEY: "1234"
    - ADMIN_KEY: aa19ed1b63955f17719f52103455f00d
    - DB: mongodb://leashposts:leashmasterposts@leash-shard-00-00.t5u93.mongodb.net:27017,leash-shard-00-01.t5u93.mongodb.net:27017,leash-shard-00-02.t5u93.mongodb.net:27017/Leash?ssl=true&replicaSet=atlas-gbs8j9-shard-0&authSource=admin&retryWrites=true&w=majority
